[gd_scene load_steps=5 format=3 uid="uid://cg5v8xh2qwp3d"]

[ext_resource type="Script" path="res://src/ui/ScorePopup.gd" id="1_score_popup"]

[sub_resource type="LabelSettings" id="LabelSettings_base"]
font_size = 48
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.7)
shadow_offset = Vector2(2, 2)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bonus"]
font_size = 36
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.7)
shadow_offset = Vector2(2, 2)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_multiplier"]
font_size = 32
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.7)
shadow_offset = Vector2(2, 2)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="ScorePopup" type="CanvasLayer"]
layer = 100
script = ExtResource("1_score_popup")

[node name="FlashRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 100.0
offset_bottom = 250.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="BaseScoreLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "+150"
label_settings = SubResource("LabelSettings_base")
horizontal_alignment = 1

[node name="BonusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "+100"
label_settings = SubResource("LabelSettings_bonus")
horizontal_alignment = 1

[node name="MultiplierLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Ã—1.5"
label_settings = SubResource("LabelSettings_multiplier")
horizontal_alignment = 1

[node name="Particles" type="CPUParticles2D" parent="CenterContainer"]
position = Vector2(640, 75)
emitting = false
amount = 25
lifetime = 0.8
one_shot = true
explosiveness = 1.0
randomness = 0.3
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 200)
initial_velocity_min = 150.0
initial_velocity_max = 300.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
scale_amount_min = 2.0
scale_amount_max = 4.0
color = Color(1, 1, 0, 1)
